--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon src/index.js --exec babel-node --ignore src/public",
     "start": "node dist/index.js",
-    "build": "babel src -d dist --copy-files"
+    "build": "babel src -d dist"
   },
   "author": "Ramiro Gumma",
   "license": "ISC",
